--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Express Hello World on Render",
   "main": "app.js",
-  "repository": "https://github.com/render-examples/express-hello-world",
+  "repository": "https://github.com/maluzete1864/express-hello-world",
   "author": "Render Developers",
   "license": "MIT",
   "private": false,
@@ -14,6 +14,6 @@
     "express": "^4.16.3"
   },
   "engines": {
-    "node": ">=14"
+    "node": "18.x"
   }
 }
