--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Express Hello World on Render",
   "main": "app.js",
-  "repository": "https://github.com/maluzete1864/express-hello-world",
+  "repository": "",
   "author": "Render Developers",
   "license": "MIT",
   "private": false,
